// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikersLabel /> should render a <FormattedMessage/> when several likers 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <i
    className="cap cap-heart-1 icon--red"
  />
  <Truncate
    ellipsis="…"
    lines={1}
  >
    <FormattedMessage
      id="proposal.likers.count"
      values={
        Object {
          "num": 2,
        }
      }
    />
  </Truncate>
</span>
`;

exports[`<ProposalDetailLikersLabel /> should render nothing when no likers 1`] = `null`;

exports[`<ProposalDetailLikersLabel /> should render truncated liker name when only one liker 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <i
    className="cap cap-heart-1 icon--red"
  />
  <Truncate
    ellipsis="…"
    lines={1}
  >
    user with a very long name that need to be truncated
  </Truncate>
</span>
`;
